# Chepp

./: .ninja_log  CMakeLists.txt  README.md  build.ninja  chest.ninja  chest.pro
doc/: paltform.list
etc/bak/: c.h  nonos.c
etc/templates/: c.nonos.src  c.os.src  c.pro  cxx.pro  default.c  default.pro  h.c.src  h.config.src  h.cxx.src  pro.c.toml  pro.cxx.toml  pro.default.toml  src.c.h
lib/chest/templates/: pro.c.toml
src/: chepp.cpp  chest.cpp  chest.h  config.h  init.cpp  new.cpp  placeholder.cpp  placeholder.h  pro.cpp  project.h  source.cpp  src.cpp  utils.cpp  utils.h
src/bak/: chest.cpp  placeholder.cpp  placeholder.h  platform.h  src.cpp
src/chepp/: main.cpp
src/commands/init/: main.cpp
src/commands/new/: main.cpp
src/commands/new/types/: pro.cpp  src.cpp
src/utils/: args.cpp  args.h
test/: setup.sh  test_chest.cpp  test_placeholder.cpp
